--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+spring.config.import=file:env.properties
 
+
+server.port=3001
+
+
+
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestionedispositivi
+spring.datasource.username=postgres
+spring.datasource.password=${PG_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.hibernate.ddl-auto=update
+
+cloudinary.name=${CLOUDINARY_NAME}
+cloudinary.apikey=${CLOUDINARY_KEY}
+cloudinary.secret=${CLOUDINARY_SECRET}
