--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.jpa.hibernate.ddl-auto=update
 cloudinary.name=${CLOUDINARY_NAME}
 cloudinary.apikey=${CLOUDINARY_KEY}
 cloudinary.secret=${CLOUDINARY_SECRET}
+
+spring.jwt.secret=${JWT_SECRET}
